--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     environment: production
     env:
       AWS_REGION: us-east-1
-
+      PYTHON_VERSION: 3.13
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -24,7 +24,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_LAMBDA_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Install uv
@@ -34,13 +34,13 @@ jobs:
       
       - name: Set up Python
         # Keep this python version in sync with the Lambda runtime
-        run: uv python install 3.13
+        run: uv python install ${{ env.PYTHON_VERSION }}
 
       - name: Build Lambda package
         run: |
           mkdir -p dist
           # Install project and dependencies directly into dist using uv pip
-          uv pip install --system --target dist .
+          uv pip install --python ${{ env.PYTHON_VERSION }} --target dist .
           # Copy source code
           cp -r app dist/
           cp handler.py dist/
@@ -52,7 +52,7 @@ jobs:
           function-name: my-greeter
           code-artifacts-dir: dist
           handler: handler.app
-          runtime: python3.13
+          runtime: python${{ env.PYTHON_VERSION }}
           publish: true
 
       - name: Register Restate deployment
@@ -61,4 +61,4 @@ jobs:
           RESTATE_ADMIN_URL: ${{ secrets.RESTATE_ADMIN_URL }}
           # Auth token with Admin Role. To get one, go to Developers > API Keys > Create API Key: https://cloud.restate.dev?createApiKey=true&createApiKeyDescription=deployment-key&createApiKeyRole=rst:role::AdminAccess
           RESTATE_AUTH_TOKEN: ${{ secrets.RESTATE_AUTH_TOKEN }}
-        run: npx -y @restatedev/restate deployment register -y ${{ steps.deploy.outputs.function-arn }} --assume-role-arn ${{ secrets.AWS_RESTATE_ROLE_TO_ASSUME }}
+        run: npx -y @restatedev/restate deployment register -y ${{ steps.deploy.outputs.function-arn }} --assume-role-arn ${{ secrets.AWS_INVOKE_ROLE_TO_ASSUME }}
