--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pydantic>=2.10.6",
-    "restate_sdk[serde]>=0.10.2",
+    "restate-sdk[serde]>=0.10.1",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
+
+[tool.uv.sources]
+restate-sdk = { path = "restate_sdk-0.10.1-cp313-cp313-manylinux_2_34_x86_64.whl" }
 
 [build-system]
 requires = ["hatchling"]
